syntax = "proto3";

option csharp_namespace = "CartService.Grpc";

package cart;

// ---- Messages ----

message GetCartRequest {
  int32 user_id = 1;
}

message CartResponse {
  int32 user_id = 1;
  repeated CartItem items = 2;
}

message CartItem {
  int32 product_id = 1;
  string product_name = 2;
  double price = 3;        
  int32 quantity = 4;
}

// ---- Service ----
service CartService {
  // Get cart details by user id
  rpc GetCartByUserId (GetCartRequest) returns (CartResponse);
}
